New wrapper class PrincipalArray replaces dangerous int[] use